--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,12 @@
 <body>
 <div class="body">
 	<img  alt="Borzo couriers" src="assets\Images\BodyImage.png" width=42% height=100%>
-	<div>
+	<div >
 		<aside>
 			<h1>Fastest Courier Service in Chennai</h1>
 			<p>Low-priced same day delivery service!</p>
 		</aside>
-		<form  [formGroup]="courierform">
+		<form  [formGroup]="courierform" *ngIf="showbf" >
 		<div class="formitems">
 			<ul>
 				<li><input formControlName="pickupaddress" id="pickupaddress" type="text" name="pickupaddress" placeholder="Pick up Address"></li>
@@ -63,11 +63,19 @@
 			<li><input type="number" formControlName="weight" name="weight" placeholder="Please enter approximate weight in kgs"> </li>
 			<span class="error" *ngIf="pdform.get('weight')?.invalid && (pdform.get('weight')?.touched || pdform.get('weight')?.dirty)">
 				Invalid entry!</span>
-			<li><input type="submit" [ngClass]="{'buttondisable':isDisabled()}" name="makepayment" value="Make payment" form="pdform"></li>
-		</ul><!--[disabled]="!pdform.valid" (onload)="isDisabled()" -->
-	</form>
+			<li><!--input routerLink="/app-paymentpage" (click)="makepayment()" type="button" [ngClass]="{'buttondisable':isDisabled()}" name="makepayment" value="Make payment" form="pdform"-->
+				<input type="submit" [ngClass]="{'buttondisable':isDisabled()}" name="makepayment" value="Make payment" form="pdform"></li>
+		</ul>
+		</form>
+		
+</div>
+<div class="Paymentscreen">
+	<div class="emptyblock"></div>
+	<div>
+<router-outlet ></router-outlet></div>
 </div>
 </body>
+
 <!--footer begins-->
 <footer>
 <div class="empty"></div>
